<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".BillActivity">

    <ScrollView
        android:id="@+id/order_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/menu_background"
        android:paddingBottom="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bill_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:drawableTop="@drawable/ic_logo"
                android:fontFamily="sans-serif"
                android:text="@string/bill"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cafe_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bill_txt"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/current_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/cafe_txt"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/csnametitlte_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_date_txt"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/csname"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/csnamebill_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_date_txt"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderbill_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/csnametitlte_txt"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/order"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bill_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/orderbill_txt"
                android:layout_marginHorizontal="20dp" />

            <TextView
                android:id="@+id/subtotaltitle_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bill_recycle"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/subtotal"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rpsubtotal_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bill_recycle"
                android:layout_toStartOf="@id/subtotal_txt"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/rp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtotal_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bill_recycle"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/taxtittle_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtotal_txt"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/tax"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tax_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtotal_txt"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totaltittle_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/taxtittle_txt"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rptotal_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tax_txt"
                android:layout_toStartOf="@id/total_txt"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/rp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tax_txt"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/total_txt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/red" />

            <TextView
                android:id="@+id/cash_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/cash"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rpcash_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/rp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/change_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cash_txt"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/change"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rpchange_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rpcash_txt"
                android:layout_marginBottom="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/rp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/thanks_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/change_txt"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/thanks"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_white"
        android:elevation="10dp">

        <TextView
            android:id="@+id/reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rectangle_rounded_red"
            android:fontFamily="sans-serif-black"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/reset"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>