<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relative_checkoutbg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/namemenu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/menu_img"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/burger"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginHorizontal="10dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/menuprice_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/menu_img"
            android:layout_below="@id/namemenu_txt"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/idr"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/countmenu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/menuprice_txt"
            android:layout_toEndOf="@id/menu_img"
            android:fontFamily="sans-serif"
            android:layout_marginHorizontal="10dp"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="4dp"/>

    </RelativeLayout>
</LinearLayout>