<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/hello_user_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/current_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:drawableRight="@drawable/calender_white"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <ScrollView
        android:id="@+id/order_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_date_txt"
        android:layout_marginTop="10dp"
        android:background="@drawable/menu_background"
        android:paddingBottom="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:drawableTop="@drawable/ic_logo"
                android:fontFamily="sans-serif"
                android:text="@string/menu"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menu_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/order_txt"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp" />


        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_white"
        android:elevation="10dp">


        <TextView
            android:id="@+id/amount_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:paddingVertical="10dp"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/checkout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/checkout"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:background="@drawable/rectangle_rounded_red"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"/>


    </RelativeLayout>
</RelativeLayout>