<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relative_cafebg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cafe_img"
            android:background="@drawable/ic_shop"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/cafename_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cafe_img"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginHorizontal="10dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/addresscafe_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cafename_txt"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@id/cafe_img"
            android:fontFamily="sans-serif"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/open_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cafe_img"
            android:layout_marginTop="7dp"
            android:layout_below="@id/addresscafe_txt"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/rectangle_rounded_red"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/open"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>