<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relative_menubg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_menus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/namemenu_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/menu_img"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/burger"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/menuprice_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/namemenu_txt"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/idr"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/menuorder_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/menuprice_txt"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_rounded_red"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/add"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_countmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_below="@id/menuprice_txt"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:orientation="horizontal">
                
                <ImageView
                    android:id="@+id/removemenu_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_remove"/>

                <TextView
                    android:id="@+id/countmenu_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/one"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:padding="4dp"/>

                <ImageView
                    android:id="@+id/addmenu_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_add"/>

            </LinearLayout>

        </RelativeLayout>



    </androidx.cardview.widget.CardView>

</LinearLayout>