<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white">

        <ImageView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_cancel"
            android:layout_margin="20dp"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/addcash_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:drawableTop="@drawable/ic_logo"
            android:fontFamily="sans-serif"
            android:text="@string/addcash"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rppopup_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addcash_txt"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="sans-serif"
            android:paddingVertical="10dp"
            android:text="@string/rp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_cashpopup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/addcash_txt"
            android:layout_toEndOf="@id/rppopup_txt"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle_white"
            android:elevation="5dp"
            android:fontFamily="sans-serif"
            android:gravity="start|center"
            android:hint="@string/zero"
            android:inputType="number"
            android:maxLength="9"
            android:paddingVertical="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/addcash_btnpopup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_cashpopup"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rectangle_rounded_red"
            android:fontFamily="sans-serif-black"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/addcash"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>